Ganti warna font

--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -142,7 +142,7 @@ p a{
 	height: 20px;
 	font-family: arial;
 	font-size: 20 px;
-	color: #ffff00;
+	color: #ff6000;
 	text-decoration: none;
 	display: block;
 	//padding: 0 50px 0 0;
@@ -186,7 +186,7 @@ p a{
 	height: 20px;
 	font-family: arial;
 	font-size: 20px;
-	color: #ffff00;
+	color: #ff6000;
 	text-decoration: none;
 	display: block;
 	padding: 0 0 0 0;
