--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -362,15 +362,17 @@ p a{
 }
 
 .dropdown-content {
-	height: 200px;
+	height: 180px;
    	overflow: auto;
     display: none;
     position: absolute;
     background-color: #b10d0f;
-    min-width: 900px;
+    width: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+.dropdown-content a {
+	height: auto;}
 .dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
@@ -983,6 +985,8 @@ p a{
     padding: 35px 20px 20px 20px;
     text-decoration: none;
 }
+.navi li div a {
+	padding: 10px 20px 10px 20px;}
 
 .navi ul form#search{
 	float: right;
