--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -981,12 +981,15 @@ p a{
 	font-size: 14px;
     display: block;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 35px 20px 20px 20px;
     text-decoration: none;
 }
 .navi li div a {
-	padding: 10px 20px 10px 20px;}
+	padding: 10px 20px 10px 20px;
+	font-weight: 100;
+    font-size: 13px;
+}
 
 .navi ul form#search{
 	float: right;
