--- a/SITA Project/css/styleinput.css
+++ b/SITA Project/css/styleinput.css
@@ -428,6 +428,9 @@ body{
 	padding: 20px 0 0;
 	text-align: center;
 }
+.body h2{
+	margin-bottom: 5px;
+}
 
 .body form{
 	border-style: solid;
@@ -475,14 +478,12 @@ body{
 .body form #site input{
 	display: table-cell;
 }
-
-.body table{
+.body #sites{
 	color: black;
 	font-family: arial;
 	text-align: center;
 	border-collapse: collapse;
     width: 100%;
-    margin: 50px 0 0 0;
 }
 .body table ul{
 	text-align: left;
@@ -492,15 +493,47 @@ body{
 }
 .body table td{
 	font-weight: normal;
-	width: 100px;
-}
-.body table #sites th{
-	width: 250px;
-}
-.body table th{
 	width: auto;
 }
+.body #sites th{
+	width: auto;
+}
+/* Style the tab */
+div.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
 
+/* Style the buttons inside the tab */
+div.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+div.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+div.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
 
 /*-------------------------navbar-------------------------*/
 
@@ -596,7 +629,7 @@ table {
 }
 td, th {
     text-align: left;
-    padding: 8px;
+   	padding: 5px;
 }
 
 a td {
@@ -614,6 +647,7 @@ a td {
 	height:1px;
 	background:#717171;
 	border-bottom:1px solid #313030;
+	margin-bottom: 30px;
 }
 
 .body  form#search{
