tambah date,ubah margin,dll

--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -437,23 +437,7 @@ body{
 	text-align: center;
 }
 .body h1 a{
-	color: #ff6000;
-	text-decoration: none;
-	
-}
-
-.body h2 {
-    font-family: helvetica, arial;
-    color: black;
-    font-size: 25px;
-    clear: both;
-    text-transform: uppercase;
-    font-weight: bold;
-    //padding: 20px 0 0;
-    text-align: left;
-}
-.body h2 a{
-	color: #4a14f8;
+	color: orangered;
 	text-decoration: none;
 	
 }
@@ -1249,6 +1233,17 @@ tr:nth-child(even) {
 }
 
 /*----------------tabel admin---------------*/
+.body h2 {
+    font-family: helvetica, arial;
+    color: black;
+    font-size: 25px;
+    clear: both;
+    text-transform: uppercase;
+    font-weight: bold;
+    //padding: 20px 0 0;
+    text-align: left;
+}
+
 .body form {
     border-style: solid;
     border-width: 7px;
@@ -1261,7 +1256,7 @@ tr:nth-child(even) {
 }
 
 .body form#satu {
-    margin: 0 0 0 0;
+    margin: 0 0 50px 0;
     width: 895px;
     padding-bottom: 0px;
     padding-top: 0px;
