--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1083,8 +1083,6 @@ body{
 
 .navi li {
     float: left;
-    margin-right: 2%;
-    margin-top: 2.5%;
 }
 
 .navi li a {
@@ -1094,7 +1092,7 @@ body{
     display: block;
     color: white;
     text-align: left;
-    //padding: 35px 20px 20px 20px;
+    padding: 35px 20px 20px 20px;
     text-decoration: none;
 }
 .navi li div a {
