Progress Detail sites

--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1146,6 +1146,7 @@ td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    width: 200px;
 }
 
 tr:nth-child(even) {
