--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -356,14 +356,6 @@ body{
     //margin-left: 19%;
 }
 
-//.body td
-{
-    //border: 1px solid #dddddd;
-    text-align: center;
-    padding: 8px;
-    width: 200px;
-}
-s
 .body ul#navigation{
 	padding: 0;
 	margin: 0;
@@ -1159,7 +1151,7 @@ table {
 
 td, th {
     border: 1px solid #dddddd;
-    text-align: center;
+    text-align: left;
     padding: 8px;
     width: 200px;
 }
