--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -70,7 +70,7 @@ body{
 .sidebar .featured{
 	width: 218px;
 	overflow: hidden;
-	margin : 0 0 0 0;
+	margin : 0 0 0 3px;
 }
 .sidebar .featured h3{
 	color: #5B5A62;
@@ -80,7 +80,7 @@ body{
     text-transform: uppercase;
 }
 .sidebar .featured a.figure{
-	margin: 20px 0 5px;
+	margin: 0 0 0 0px;
 	display: block;
 	background: none;
 	position: static;
@@ -146,7 +146,7 @@ body{
 }
 .sidebar div#tweets{
 	clear: both;
-	margin: 30px 0 0 23px;
+	margin: 30px 0 0 20px;
 }
 .sidebar div#tweets h3{
 	text-align: center;
@@ -189,7 +189,7 @@ body{
 	color: #5A5A6B;
 }
 .sidebar div#article{
-	margin: 30px 0 0 23px;
+	margin: 10px 0 0 23px;
 }
 .sidebar div#article h3{
 	//background: url(../images/icons.gif) no-repeat 100px -35px;
