--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1063,8 +1063,8 @@ body{
 }
 .navi{
 	margin:0 0 0 0;
-	padding: 0 0 20px 0;
-	background-color: #ffffff;
+	padding: 0 0 10px 0;
+	background-color: gold;
 }
 
 
