--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1406,3 +1406,16 @@ div.tab button {
 	display: table-cell;
 }
 
+button {
+    align-items: flex-start;
+    text-align: center;
+    cursor: default;
+    color: buttontext;
+    background-color: buttonface;
+    box-sizing: border-box;
+    padding: 3px 10px 3px 10px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonface;
+    border-image: initial;
+}
