--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1143,7 +1143,7 @@ table {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 20px;
-    font-size: 14px;
+    font-size: 69%;
 }
 
 td, th {
