--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1,4 +1,4 @@
-/* Website template by freewebsitetemplates.com */
+
 /*------------------------- Layout styles ------------------------*/ 
 html {
   height: 100%;
@@ -13,12 +13,10 @@ body{
 	position: inherit;
     top: 0px;
     bottom: 0px;
-    height: 100%
-    /* margin: 99px 0 0 0; */
+    height: 100%;
 }
 .page{
 	margin: 0 0 0 30px;
-    //overflow: auto;
     position: inherit;
     height: 100%;
 }
@@ -36,7 +34,6 @@ body{
     position: absolute;
     right: 0px;
     z-index: -1;
-    //margin: 0 0 0 53%;
 }
 .abs3-img{
 	height: 120px;
@@ -45,7 +42,6 @@ body{
     bottom: 0px;
     left: 250px;
     z-index: -1;
-    //margin: 778px 0 0 240px;
 }
 .abs4-img{
 	height: 120px;
@@ -54,10 +50,8 @@ body{
     bottom: 0px;
     right: 0px;
     z-index: -1;
-    //margin: 778px 0 0 790px;
 }
 
-/* Paragraph link color */
 	
 /*------------------------- Sidebar ------------------------*/ 
 .sidebar{
@@ -157,23 +151,17 @@ body{
 	color: gold;
 	text-decoration: none;
 	display: block;
-	//padding: 0 50px 0 0;
 	line-height: 21px;
-	//width: 40px;
 	text-transform: uppercase;
 	font-weight: bold;
 	margin: 0 0 10px 0;
 }
 .sidebar div#tweets p{
-	//background: url(../images/interface.gif) no-repeat;
 	font-family: arial;
     font-size: 14px;
     height: 90px;
-    //line-height: 21px;
-    //margin: 0;
     padding: 0 0 0 10px;
     text-align: center;
-    //width: 180px;
 	color: #ffffff;
 	font-weight: bold;
 }
@@ -193,7 +181,6 @@ body{
 	margin: 10px 0 0 23px;
 }
 .sidebar div#article h3{
-	//background: url(../images/icons.gif) no-repeat 100px -35px;
 	text-align: center;
 	height: 20px;
 	font-family: arial;
@@ -207,7 +194,6 @@ body{
 	font-weight: bold;
 	margin: 0px 0 10px 0;
 }
-
 .sidebar div#article p{
 	font-family: arial;
     font-size: 14px;
@@ -217,7 +203,6 @@ body{
 	color: #ffffff;
 	font-weight: bold;
 }
-
 .sidebar div#article p a{
 	color: #ffffff;
     text-decoration: none;
@@ -227,7 +212,6 @@ body{
     text-align: left;
     font-weight: bold;
 }
-
 .sidebar div#article ul li p{
 	font-family: arial;
     font-size: 14px;
@@ -350,14 +334,12 @@ body{
     position: absolute;
     margin-top: 100px;
 }
-
 .body img
 {
     max-width: 150px;
     max-height: 150px;
     //margin-left: 19%;
 }
-
 .body ul#navigation{
 	padding: 0;
 	margin: 0;
@@ -393,7 +375,6 @@ body{
 	background: url(../images/navigation.gif) no-repeat right -25px;
 	margin: 0 0 0 3px;
 }
-
 .dropdown-content {
 	height: 220px;
    	overflow: auto;
@@ -405,9 +386,11 @@ body{
     z-index: 1;
 }
 .dropdown-content a {
-	height: auto;}
-.dropdown-content a:hover {background-color: #f1f1f1}
-
+	height: auto;
+}
+.dropdown-content a:hover {
+	background-color: #f1f1f1
+}
 .dropdown:hover .dropdown-content {
     display: block;
 }
@@ -433,8 +416,6 @@ body{
 	width: 55px;
 	background: url(../images/interface.gif) no-repeat 0 -186px;
 }
-
-
 .body h1{
 	font-family: helvetica, arial;
 	color: #4a14f8;
@@ -447,7 +428,6 @@ body{
 }
 .body h1 a{
 	text-decoration: none;
-	
 }
 .body h6 {
     font-family: helvetica, arial;
@@ -477,7 +457,6 @@ body{
 	text-decoration: none;
 	
 }
-
 .body ul.navigation{
 	//height: 45px;
     list-style: none;
@@ -493,9 +472,6 @@ body{
 
 }	
 .body ul.navigation li{
-	//	border-width: 1px;
-	//	border-style: solid none;
-	//  border-color: #373646;
 	float: left;
 	height: 50px;
 	text-align: center;
@@ -527,20 +503,12 @@ body{
 }
 .body div#featured{
 	height: auto;
-	_height: 1%;`
 	overflow: hidden;
 	width: auto;
-	_width: 715px;
-	//background: url(../images/bg-label.gif) no-repeat top left;
-	//margin: 45px 0 0 -109px;
 }
-
 .body div#featured div{
 	float: left;
 	width: 100%;
-	//_width: 600px;
-	//margin: 0 0 0 38px;
-	//padding: 0 0 17px;
 }
 .body div#featured div img{
 	float: left;
@@ -600,7 +568,6 @@ body{
     text-align: center;
     width: 100%;
 }
-
 .body div#featured div h5{
 	color: #b10d0f;
     float: left;
@@ -612,17 +579,6 @@ body{
     width: 100%;
     font-weight: bold;
 }
-//.body div#featured div h6{
-	color: darkred;
-    font-family: arial;
-    font-size: 160px;
-    line-height: 200px;
-    margin: 0 0 20px 0;
-    text-align: center;
-    width: 100%;
-    font-weight: bold;
-}
-
 .body div#featured div span{
 	color: #074679;
 	font-family: arial;
@@ -699,8 +655,6 @@ body{
     height: auto;
     margin: 45px 0 0 -109px;
     overflow: hidden;
-	_height: 1%;
-	_width: 715px;
 }
 .body div.article div{
 	float: left;
@@ -1055,8 +1009,6 @@ body{
 	top: 40px;
 }
 
-
-
 /*-------------------------navbar-------------------------*/
 
 #navbar{
@@ -1071,8 +1023,6 @@ body{
 	z-index: 20;
 	width: 100%
 }
-
-
 .navi ul {
     list-style-type: none;
     margin: 0 0 0 0;
@@ -1080,16 +1030,13 @@ body{
     overflow: hidden;
     background-color: #b10d0f;
 }
-
 .navi ul img {
 	height: 90px;
 	float: left;
 }
-
 .navi li {
     float: left;
 }
-
 .navi li a {
 	font-weight: bold;
 	font-family: arial;
@@ -1133,10 +1080,6 @@ body{
 	width: 55px;
 	background: url(../images/interface.gif) no-repeat 0 -186px;
 }
-/* Change the link color to #111 (black) on hover */
-//.navi li a:hover {
-    background-color: #111;
-}
 
 /*----------------tabel--------------*/
 
@@ -1147,14 +1090,12 @@ table {
     margin-bottom: 20px;
     font-size: 69%;
 }
-
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
     width: 200px;
 }
-
 tr:nth-child(even) {
     background-color: #dddddd;
 }
@@ -1165,12 +1106,12 @@ tr:nth-child(even) {
 	background:#717171;
 	border-bottom:1px solid #313030;
 }
-
 .body  form1#search{
 	float: left;
 	margin: 0 0 20px 0;
 	//padding: 35px 20px 0 20px;
 }
+
 /*-------------------pagination---------------*/
 .pagination {
     display: inline-block;
@@ -1178,7 +1119,6 @@ tr:nth-child(even) {
     padding-right: 10px
 
 }
-
 .pagination a {
     color: black;
     float: left;
@@ -1189,7 +1129,6 @@ tr:nth-child(even) {
     background-color: #4CAF50;
     color: white;
 }
-
 .pagination a:hover:not(.active) {background-color: #ddd;}
 .pagination div#featured div{
 	float: left;
@@ -1265,7 +1204,6 @@ tr:nth-child(even) {
     padding-right: 25px;
     text-decoration: none;
 }
-
 .body form button {
     float: right;
     margin-top: 15px;
@@ -1281,7 +1219,6 @@ tr:nth-child(even) {
     font-weight: bold;
     text-align: left;
 }
-
 .body form {
     border-style: solid;
     border-width: 7px;
@@ -1290,9 +1227,7 @@ tr:nth-child(even) {
     display: table;
     margin: 50px 200px 0 200px;
     padding: 25px 30px 60px 20px;
-    //border-radius: 20px;
 }
-
 .body form#satu {
     margin: 0 0 50px 0;
     width: 895px;
@@ -1307,7 +1242,6 @@ tr:nth-child(even) {
     margin-left: 20px;
     text-align: justify;
 }
-
 .body form #site p {
     display: table-row;
     color: black;
@@ -1328,7 +1262,6 @@ tr:nth-child(even) {
     padding-left: 70px;
     font-size: 14px;
 }
-
 .body form #site input, select {
     display: table-cell;
     margin-left: 70px;
@@ -1340,33 +1273,26 @@ tr:nth-child(even) {
     font-size: 18px;
     font-family: sans-serif;
 }
-
-
 .body form div#site .tabcontent {
     //width: 700px;
 }
-
 .tabcontent {
     display: none;
     //padding: 6px 12px;
     border-top: none;
     //width: 550px;
 }
-
 .body div {
     display: block;
 }
-
 div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
-
 div.tab button.active {
     background-color: #ccc;
 }
-
 div.tab button {
     background-color: inherit;
     float: left;
@@ -1377,7 +1303,6 @@ div.tab button {
     transition: 0.3s;
     font-size: 14px;
 }
-
 .body p {
     display: block;
     -webkit-margin-before: 1em;
@@ -1385,11 +1310,9 @@ div.tab button {
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
 }
-
 .body label {
     cursor: default;
 }
-
 .body form #tulis{
 	color: black;
 	font-family: arial;
@@ -1397,7 +1320,6 @@ div.tab button {
 	margin-left: 20px;
 	text-align: justify;
 }
-
 .body form #tulis p{
 	display: table-row;
 }
@@ -1410,7 +1332,6 @@ div.tab button {
 .body form #tulis input{
 	display: table-cell;
 }
-
 button {
     align-items: flex-start;
     text-align: center;
@@ -1448,11 +1369,9 @@ button {
 	padding: 60px 0 0;
 	text-align: center;
 }
-
 .body2 h1 a{
 	text-decoration: none;
 }
-
 .body2 p{
 
 	color: #000000;
