--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -1186,7 +1186,7 @@ tr:nth-child(even) {
 
 }
 @page {
-    size:  legal;   /* auto is the initial value */
+    size:  landscape;   /* auto is the initial value */
     margin-top: 12.5mm;
     margin-bottom: 12.5mm;
     margin-right: 0mm;
