--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -141,7 +141,7 @@ body{
 }
 .sidebar div#tweets{
 	clear: both;
-	margin: 30px 0 0 20px;
+	margin: 10px 0 0 20px;
 }
 .sidebar div#tweets h3{
 	text-align: center;
@@ -154,7 +154,7 @@ body{
 	line-height: 21px;
 	text-transform: uppercase;
 	font-weight: bold;
-	margin: 0 0 10px 0;
+	margin: 0 0 0 0;
 }
 .sidebar div#tweets p{
 	font-family: arial;
