--- a/SITA Project/css/style.css
+++ b/SITA Project/css/style.css
@@ -339,7 +339,7 @@ body{
     max-width: 150px;
     max-height: 150px;
     //margin-left: 19%;
-}
+}zz
 .body ul#navigation{
 	padding: 0;
 	margin: 0;
